--- a/sample-project/css/site.css
+++ b/sample-project/css/site.css
@@ -38,6 +38,10 @@
             font-size: 34px;
             line-height: 40px;
         }
+   .description2 {
+            font-size: 34px;
+            line-height: 40px;
+        }
 
         .next-steps-container {
             padding-top: 50px;
