--- a/sample-project/css/site.css
+++ b/sample-project/css/site.css
@@ -38,7 +38,7 @@
             font-size: 34px;
             line-height: 40px;
         }
-   .description2 {
+   .description {
             font-size: 34px;
             line-height: 40px;
         }
