--- a/sample-project/css/site.css
+++ b/sample-project/css/site.css
@@ -27,6 +27,12 @@
             padding-bottom: 50px;
             margin: auto;
         }
+.cloud-image2 {
+            width: 1200px;
+            height: 250px;
+            padding-bottom: 50px;
+            margin: auto;
+        }
 
         .success-text {
             padding-bottom: 20px;
