--- a/sample-project/css/site.css
+++ b/sample-project/css/site.css
@@ -5,6 +5,13 @@
             padding: 0;
             margin: 0;
         }
+        body1 {
+            height: 100%;
+            width: 100%;
+            padding: 0;
+            margin: 0;
+        }
+
         @font-face{
             font-family: "Segoe UI";
             src: url('../fonts/segoeuil.ttf');
